Update 'about' section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="about">
       <h2>عن سايكل</h2>
-      <p>استبدال نقاطك بكاشات، خصومات علي منتجات غذائية أو تبرع بها للجمعيات الخيرية الشريكة لنا</p>
+      <p>شركة ناشئة لجمع المخلفات الصلبة بنقاط... يمكنك استبدالها  بكاشات أو خصومات علي منتجات أو التبرع بها للجمعيات الخيرية الشريكة لنا</p>
 
       <div class="swiper mySwiper">
         <!-- المحتوى المتحرك -->
